# ProposalFlowAI_Codex

./: .gitignore  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_activity_logs_security.py  0003_phase3_opportunities.py  0004_archive_restore_cursor_guards.py  0005_phase4_opportunity_intake.py  0006_phase4_file_processing.py  0007_phase5_lead_brief_workspace.py  0007_phase7_templates_rules.py  0008_phase6_discovery_workspace.py  0008_phase7_proposal_draft.py
apps/api/app/: __init__.py  account_models.py  account_service.py  activity_logs.py  admin.py  auth_routes.py  dashboard_routes.py  dashboard_service.py  db.py  discovery_models.py  discovery_repository.py  discovery_routes.py  discovery_service.py  file_processing_runtime.py  lead_brief_models.py  lead_brief_repository.py  lead_brief_routes.py  lead_brief_service.py  main.py  opportunity_file_routes.py  opportunity_input_routes.py  opportunity_models.py  opportunity_repository.py  opportunity_routes.py  opportunity_service.py  product.py  proposal_draft_models.py  proposal_draft_repository.py  proposal_draft_routes.py  proposal_draft_service.py  security.py  templates_rules_models.py  templates_rules_repository.py  templates_rules_routes.py  templates_rules_service.py  workspace_routes.py
apps/api/proposalflow_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
apps/worker/: main.py  pyproject.toml
apps/worker/tasks/: file_processing.py
(+264 files in other folders)
